feat:  add missing create and update cluster component types operations
